[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-image-bridge"
version = "0.1.0"
description = "Bridge OpenAI-compatible image generation requests to chat/completions image-tool backends."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Image Bridge contributors" }
]
keywords = ["openai", "image-generation", "proxy", "bridge", "chat-completions"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: Proxy Servers",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.scripts]
openai-image-bridge = "openai_image_bridge.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
